dwr 2p clipping fix and image-set

--- a/public/dwr/two.css
+++ b/public/dwr/two.css
@@ -19,6 +19,11 @@
     --bestX: 460px; --bestY: 494px;
 
     --border: 2px;
+
+    --clipX1: calc(var(--videoX) + var(--border));
+    --clipX2: calc(var(--videoX) + var(--vidWidth) - var(--border));
+    --clipY1: calc(var(--videoY) + var(--border));
+    --clipY2: calc(var(--videoY) + var(--vidHeight) - var(--border));
 }
 
 .background-color-1{
@@ -62,13 +67,13 @@
     position: relative;
 }
 
-.map-background{background-color: #002899;}
-
-.notavif .map-background{
+.map-background{
+    background-color: #002899;
     background-image: url('images/alefgard_crop_dark.png');
-}
-.avif .map-background{
-    background-image: url('images/alefgard_crop_dark.avif');
+    background-image: image-set(
+        url("images/alefgard_crop_dark.avif") type("image/avif"),
+        url("images/alefgard_crop_dark.png") type("image/png")
+    );
 }
 
 .player-panels-contain{
@@ -925,10 +930,12 @@ figcaption{
     background-repeat: no-repeat;
     display: block;
     transform: scale(2);
-  }
-
-.notwebp [property="monster_image"] img{background-image: url('images/monsters/monster-spritesheet.png');}
-.webp [property="monster_image"] img{background-image: url('images/monsters/monster-spritesheet.webp');}
+    background-image: url('images/monsters/monster-spritesheet.png');
+    background-image: image-set(
+        url("images/monsters/monster-spritesheet.webp") type("image/webp"),
+        url("images/monsters/monster-spritesheet.png") type("image/png")
+    );
+}
 
 .dragon-blue img{
     width: 62px;
